Changes for JPrime 2025
Signed-off-by: doychin <doychin@dsoft-bg.com>